# lds-cosmic-applet

./: Cargo.toml  README.md
contrib/: PKGBUILD  com.byte6d65.lds.CosmicApplet.desktop  com.system76.CosmicAppletLds.desktop
src/: app.rs  main.rs
