[package]
name = "lds-cosmic-applet"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "LDS dictation service COSMIC panel applet"
repository = "https://github.com/BYTE-6D65/lds-cosmic-applet"

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "tokio",
    "wayland",
    "winit",
]
